# FaceFynd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
ai_logic/: facedetector.cpp  facedetector.h
database/: dbmanager.cpp  dbmanager.h  dbworker.h
scanner/: photoscanner.cpp  photoscanner.h
